clean up case-sensitivity in bookmark import parser (convert tag to uppercase before comparisons) and allow importing of separators (<HR>) from mozilla (bug 242169)